<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntranceActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        android:gravity="center"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_margin="14dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="60dp"
            android:background="@drawable/background_white"
            android:elevation="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/entrance_name"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/jost"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image_logo"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:padding="4dp"
                        android:src="@drawable/icon_logo"/>


                    <ImageView
                        android:layout_width="39dp"
                        android:layout_height="33dp"
                        android:src="@drawable/triangle"
                        android:layout_gravity="center"/>

                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/edittextLogin"
                android:hint="@string/entrance_login"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:layout_marginBottom="30dp"
                style="@style/EntranceEditeTextStyle"/>

            <EditText
                android:id="@+id/edittextPassword"
                android:inputType="textPassword"
                android:autofillHints="emailAddress"
                android:hint="@string/entrance_password"
                style="@style/EntranceEditeTextStyle"/>


            <TextView
                android:id="@+id/textEnter"
                android:fontFamily="@font/jost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entrance_come_in"
                android:textSize="22sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:layout_margin="40dp"
                android:background="@drawable/background_button_blue"
                android:layout_gravity="center"
                android:elevation="20dp"/>


            <TextView
                android:id="@+id/textForgotPassword"
                android:text="@string/entrance_forgot_password"
                android:fontFamily="@font/jost"
                style="@style/EntranceTextHelp" />

            <TextView
                android:id="@+id/textCreateAccount"
                android:text="@string/entrance_create_account"
                android:fontFamily="@font/jost"
                style="@style/EntranceTextHelp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/textLangRU"
                    android:text="@string/entrance_lang_ru"
                    android:fontFamily="@font/jost"
                    style="@style/EntranceLangText"/>

                <TextView
                    android:id="@+id/textLangEN"
                    android:text="@string/entrance_lang_en"
                    android:fontFamily="@font/jost"
                    style="@style/EntranceLangText"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/textLangZH"
                    android:text="@string/entrance_lang_zh"
                    android:fontFamily="@font/jost"
                    style="@style/EntranceLangText"/>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:background="@drawable/background_red">

            <ImageView
                android:id="@+id/icon_"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"
                android:src="@drawable/icon_warning"/>

            <TextView
                android:id="@+id/textMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:fontFamily="@font/jost"
                android:layout_weight="1"/>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>